modules/networking/main.tf

# Declare the data source
data "aws_availability_zones" "available" {
  state = "available"
}

/*==== The VPC ======*/
resource "aws_vpc" "vpc" {
  cidr_block           = "${var.vpc_cidr}"
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name        = "${var.environment}-vpc"
    Environment = "${var.environment}"
  }
}
/*==== Subnets ======*/
/* Internet gateway for the public subnet */
resource "aws_internet_gateway" "ig" {
  vpc_id = "${aws_vpc.vpc.id}"
  tags = {
    Name        = "${var.environment}-igw"
    Environment = "${var.environment}"
  }
}
/* Elastic IP for NAT */
resource "aws_eip" "nat_eip" {
  vpc        = true
  depends_on = [aws_internet_gateway.ig]
}
/* NAT */
resource "aws_nat_gateway" "nat" {
  allocation_id = "${aws_eip.nat_eip.id}"
  subnet_id     = "${element(aws_subnet.public_subnet.*.id, 0)}"
  depends_on    = [aws_internet_gateway.ig]
  tags = {
    Name        = "nat"
    Environment = "${var.environment}"
  }
}
/* Public subnet */
resource "aws_subnet" "public_subnet" {
  vpc_id                  = "${aws_vpc.vpc.id}"
  count                   = "${length(var.public_subnets_cidr)}"
  cidr_block              = "${element(var.public_subnets_cidr,   count.index)}"
  #availability_zone       = "${element(var.availability_zones,   count.index)}"
  availability_zone = data.aws_availability_zones.available.names[0]
  map_public_ip_on_launch = true
  tags = {
    Name        = "${var.environment}-${element(data.aws_availability_zones.available.names,0)}-public-subnet"
    Environment = "${var.environment}"
  }
}
/* Private subnet-1 */
resource "aws_subnet" "private_subnet1" {
  vpc_id                  = "${aws_vpc.vpc.id}"
  count                   = "${length(var.private_subnets_cidr1)}"
  cidr_block              = "${element(var.private_subnets_cidr1, count.index)}"
  #availability_zone       = "${element(var.availability_zones,   count.index)}"
  availability_zone       = data.aws_availability_zones.available.names[1]
  map_public_ip_on_launch = false
  tags = {
    Name        = "${var.environment}-${element(data.aws_availability_zones.available.names,1)}-private-subnet1"
    Environment = "${var.environment}"
  }
}

/* Private subnet-2 */
resource "aws_subnet" "private_subnet2" {
  vpc_id                  = "${aws_vpc.vpc.id}"
  count                   = "${length(var.private_subnets_cidr2)}"
  cidr_block              = "${element(var.private_subnets_cidr2, count.index)}"
  #availability_zone       = "${element(var.availability_zones,   count.index)}"
  availability_zone       = data.aws_availability_zones.available.names[2]
  map_public_ip_on_launch = false
  tags = {
    Name        = "${var.environment}-${element(data.aws_availability_zones.available.names,2)}-private-subnet2"
    Environment = "${var.environment}"
  }
}

/* Private subnet-3 */
resource "aws_subnet" "private_subnet3" {
  vpc_id                  = "${aws_vpc.vpc.id}"
  count                   = "${length(var.private_subnets_cidr3)}"
  cidr_block              = "${element(var.private_subnets_cidr3, count.index)}"
  #availability_zone       = "${element(var.availability_zones,   count.index)}"
  availability_zone       = data.aws_availability_zones.available.names[3]
  map_public_ip_on_launch = false
  tags = {
    Name        = "${var.environment}-${element(data.aws_availability_zones.available.names,3)}-private-subnet3"
    Environment = "${var.environment}"
  }
}

/* Routing table for private subnet */
resource "aws_route_table" "private" {
  vpc_id = "${aws_vpc.vpc.id}"
  tags = {
    Name        = "${var.environment}-private-route-table"
    Environment = "${var.environment}"
  }
}
/* Routing table for public subnet */
resource "aws_route_table" "public" {
  vpc_id = "${aws_vpc.vpc.id}"
  tags = {
    Name        = "${var.environment}-public-route-table"
    Environment = "${var.environment}"
  }
}
resource "aws_route" "public_internet_gateway" {
  route_table_id         = "${aws_route_table.public.id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.ig.id}"
}
resource "aws_route" "private_nat_gateway" {
  route_table_id         = "${aws_route_table.private.id}"
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = "${aws_nat_gateway.nat.id}"
}
/* Route table associations */
resource "aws_route_table_association" "public" {
  count          = "${length(var.public_subnets_cidr)}"
  subnet_id      = "${element(aws_subnet.public_subnet.*.id, count.index)}"
  route_table_id = "${aws_route_table.public.id}"
}
resource "aws_route_table_association" "private1" {
  count          = "${length(var.private_subnets_cidr1)}"
  subnet_id      = "${element(aws_subnet.private_subnet1.*.id, count.index)}"
  route_table_id = "${aws_route_table.private.id}"
}

resource "aws_route_table_association" "private2" {
  count          = "${length(var.private_subnets_cidr2)}"
  subnet_id      = "${element(aws_subnet.private_subnet2.*.id, count.index)}"
  route_table_id = "${aws_route_table.private.id}"
}

resource "aws_route_table_association" "private3" {
  count          = "${length(var.private_subnets_cidr3)}"
  subnet_id      = "${element(aws_subnet.private_subnet3.*.id, count.index)}"
  route_table_id = "${aws_route_table.private.id}"
}
/*==== VPC's Default Security Group ======*/
resource "aws_security_group" "default" {
  name        = "${var.environment}-default-sg"
  description = "Default security group to allow inbound/outbound from the VPC"
  vpc_id      = "${aws_vpc.vpc.id}"
  depends_on  = [aws_vpc.vpc]
  ingress {
    from_port = "0"
    to_port   = "0"
    protocol  = "-1"
    self      = true
  }
  
  egress {
    from_port = "0"
    to_port   = "0"
    protocol  = "-1"
    self      = "true"
  }
  tags = {
    Environment = "${var.environment}"
    Name = "${var.environment}-DefaultSG"
  }
}
